# routes_kas

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: checked.yml
kas/: chunker.py  date_parser.py  departures.py  distributor.py  generator.py  page_builder.py  parser.py  path_handler.py
kas/database/: distance_from_main.py  distances.py  vehicles.py
kas/generator/: generator.py  journey_helpers.py  ordinary_day.py  refill_day.py  step_build.py
kas/scripts/: kas.py
kas/user_data/: __init__.py  by_days.json  input.json
kas/windows/: days_window.py  start_window.py
tests/: __init__.py  test_inner.py
tests/fixtures/: chunks1.json  data1.json  expected_chunks1.json  expected_fuels1.json  expected_routes1.json  initial_data1.json
