[tool.poetry]
name = "routes-kas"
version = "0.1.0"
description = ""
authors = ["Georgievsky <jespy.kz@gmail.com>"]
readme = "README.md"
packages = [
    {include = "kas"}
]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.3.1"

[tool.poetry.scripts]
routes = "kas.windows.start_window:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
